# WASABI

./: .gitignore  README.md  environment.yml  environment_temp.yml  pyproject.toml  requirements.txt  setup.py
docs/problem_formulation/: problem_formulation.aux  problem_formulation.fdb_latexmk  problem_formulation.fls  problem_formulation.tex
scripts/: data_simulation_plots.ipynb
src/wasabi/: data_simulation.py
