[project]
name = "wasabi"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wasabi"]

[tool.uv.workspace]
members = [
    "wasabi",
]
